# MAS_UniSync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fix_db_versions.py  pyproject.toml
.github/workflows/: release.yml
docs/: design-plan.md
docs/aegis/: INDEX.md  README.md
docs/aegis/plans/: 2026-07-08-ui-i18n.md
docs/aegis/specs/: 2026-07-08-ui-i18n-design.md
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: portal-smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: adminApi.ts  authApi.ts  client.test.ts  client.ts  profileKeysApi.ts  types.ts
frontend/src/auth/: AuthProvider.tsx  RequireAdmin.tsx  RequireAuth.tsx  storage.ts
frontend/src/components/: AvatarName.tsx  ByteSize.tsx  ConfirmDialog.tsx  CopyableSecret.test.tsx  CopyableSecret.tsx  EmptyState.tsx  ErrorBanner.tsx  FormDialog.tsx  GitHubProjectLink.tsx  LanguageSwitcher.tsx  LoadingState.tsx  RelativeTime.tsx  StatusLabel.tsx  StorageUsageBar.tsx
frontend/src/i18n/: index.ts  resources.ts
mas_unisync_server/: __init__.py  auth.py  database.py  flarum.py  main.py  models.py  schemas.py  services.py  settings.py  storage.py
scripts/: cleanup_versions.py  flarum_login_probe.py  run_dev_server.py  simulate_submod_upload.py
tests/: test_packaging.py  test_server_core.py  test_settings.py  test_simulate_submod_upload.py  test_storage.py  test_submod_client_core.py  test_submod_packaging.py  test_submod_sync_session.py
(+19 files in other folders)
